Closed
Bug 125647
Opened 24 years ago
Closed 24 years ago
input type=radio checked attribute problem
Categories
(Core :: DOM: HTML Parser, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: mrcawfee, Assigned: harishd)
References
()
Details
Attachments
(2 files)
|
585 bytes,
text/html
|
Details | |
|
545 bytes,
patch
|
hjtoi-bugzilla
:
review+
jst
:
superreview+
scc
:
approval+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.8) Gecko/20020204
BuildID: 2002020406
If you have a radio button like this <input type="radio" name="button" value="1"
CHECKED/> the browser will not mark the button as checked it will ony do so if
it is <input type="radio" name="button" CHECKED value="1"/>
Reproducible: Always
Steps to Reproduce:
1.make a page with a form and try both of thosecombonations
2.
3.
Comment 1•24 years ago
|
||
Updated•24 years ago
|
Status: UNCONFIRMED → NEW
Component: Browser-General → HTML Form Controls
Ever confirmed: true
OS: Windows 2000 → All
Summary: form checked errors → input type=radio checked attribute problem
Comment 4•24 years ago
|
||
I have definitely dealt with this issue in bug 108308 (it was frustrating).
Depends on: 108308
Comment 5•24 years ago
|
||
Marking nsbeta1+ since it will be solved by the patch for bug 108308
Comment 6•24 years ago
|
||
Hmm, it appears the only thing that is wrong with this is a parser issue.
CHECKED /> is being parsed but CHECKED/> is not.
Assignee: jkeiser → harishd
Component: HTML Form Controls → Parser
QA Contact: madhur → moied
The forward slash in an start tag, <TAG ATTR/>, should not be a part of the
attribute. When trying to do that we swallowed, in addition to '/', the alpha
character preceding the forward slash. The fix is to update the iterator
position such that the legal attribute is not truncated.
Comment 8•24 years ago
|
||
Comment on attachment 73985 [details] [diff] [review]
patch v1.0
sr=jst
Attachment #73985 -
Flags: superreview+
Comment on attachment 73985 [details] [diff] [review]
patch v1.0
r=heikki
Attachment #73985 -
Flags: review+
Comment 10•24 years ago
|
||
Comment on attachment 73985 [details] [diff] [review]
patch v1.0
a=scc
Attachment #73985 -
Flags: approval+
| Assignee | ||
Comment 11•24 years ago
|
||
FIXED
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•