Do not truncate a legal attribute value when trying to ignore '/' in a short-hand-tag. b=125647, r=heikki, sr=jst, a=scc